# final-project-terminator

./: .gitignore  CMakeLists.txt  README.md  aim_target  package.xml  rosdoc.yaml  setup.bash  setup.py  terminator.rosinstall  test.py
action/: AimGun.action  Commands.action
config/: add_grippers.sh  connect.sh
doc/: manifest.yaml  modules.rst  terminator.rst
doc/html/: .buildinfo  genindex.html  index-msg.html  index.html  modules.html  objects.inv  search.html  searchindex.js
doc/html/.doctrees/: environment.pickle  index.doctree  modules.doctree
launch/: image_pipeline.launch  manipulate.launch  move.launch  setup.launch  t_sim.launch
models/nerf/: model.config  model.sdf
models/table/: model.sdf
nodes/: ArmRobotClient  aim_target  calibrate  commander  final_pose  finalpose_test  image_pipeline  image_pipleline  lefttest2  mastercommander  move_arm  move_left  move_left_actiontest  move_right  move_right_actiontest  move_test  righttest2  safeArms  safe_arms
src/terminator/: gripper.py
test/: myTest.py  myTest.test
worlds/: t_sim.world
